k8s_resources/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - --configFile=/etc/traefik/traefik.yml
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 8443
            - name: admin
              containerPort: 8080
          volumeMounts:
            - name: cfg
              mountPath: /etc/traefik
      volumes:
        - name: cfg
          configMap:
            name: traefik-static

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 8000
      nodePort: 30080
    - name: websecure
      port: 443
      targetPort: 8443
      nodePort: 30443

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: dashboard
      port: 8080
      targetPort: 8080
      nodePort: 30088
